# SkyDumper

./: .gitignore  CMakeLists.txt  README.md  hid.c  hid_linux.c  hid_win.c  main.cpp  portalio.cpp  skylander.cpp
cmake/: Findlibusb-1.0.cmake
include/: hidapi.h  portalio.h  skylander.h
